import java.util.Properties

// 内部调试轨迹门控（评估 v1.0 §4.3）：只控制 UI 可见性；诊断日志无条件输出。
// 默认 false；所有构建变体均以该项目级显式配置为唯一可见性开关。
val traceRequested = providers.gradleProperty("matrix.debugTraceUi")
    .map(String::toBoolean)
    .orElse(false)
// Instrumentation APK 会以 target package 的身份访问真实的 system-UID 数据区。该设备又是
// 用户联调机，安装/运行 androidTest 可能重置 updated-system-app 的 data inode；必须由调用者
// 显式承认这一破坏性动作，不能把普通 ./gradlew connected... 误当成无副作用检查。
val destructiveConnectedTestAllowed = providers.gradleProperty(
    "matrix.allowDestructiveConnectedTest",
).map(String::toBoolean).orElse(false)

private val platformKeyDirectory = file("tools/key")
private val platformKeyStore = platformKeyDirectory.resolve("platform.p12")
private val matrixVersionName = providers.gradleProperty("MATRIX_VERSION_NAME").get()
private val matrixVersionCode = providers.gradleProperty("MATRIX_VERSION_CODE").get().toInt()
// Generated by the same LineageOS tree used to build the target image. This mirrors PanoBox's
// framework-<build>.jar bootstrap classpath and exposes the system-only ServiceManager API.
private val lineageFrameworkJar = file("tools/framework/framework-lineage-grus.jar")
private val platformSigningProperties = Properties().apply {
    val propertiesFile = platformKeyDirectory.resolve("signing.properties")
    if (propertiesFile.isFile) {
        propertiesFile.inputStream().use(::load)
    }
}

plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace = "com.matrix.agent"
    compileSdk = libs.versions.compileSdk.get().toInt()

    defaultConfig {
        applicationId = "com.matrix.agent"
        minSdk = libs.versions.minSdk.get().toInt()
        targetSdk = libs.versions.targetSdk.get().toInt()
        versionCode = matrixVersionCode
        versionName = matrixVersionName

        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"

        // 端侧推理仅支持 arm64-v8a（MNN 模型体积/算力约束），与 :ondevice 对齐
        ndk {
            abiFilters += "arm64-v8a"
        }

        // Room schema JSON 落盘，供 migration 测试使用
        javaCompileOptions {
            annotationProcessorOptions {
                arguments(
                    mapOf(
                        "room.schemaLocation" to "$projectDir/schemas",
                        "room.incremental" to "true",
                    ),
                )
            }
        }
    }

    signingConfigs {
        create("platform") {
            storeFile = platformKeyStore
            storePassword = platformSigningProperties.getProperty("storePassword", "")
            keyAlias = platformSigningProperties.getProperty("keyAlias", "platform")
            keyPassword = platformSigningProperties.getProperty("keyPassword", "")
            enableV1Signing = true
            enableV2Signing = true
            enableV3Signing = true
        }
    }

    buildTypes {
        getByName("debug") {
            // android.uid.system packages cannot be installed with the default debug key.
            signingConfig = signingConfigs.getByName("platform")
            buildConfigField("boolean", "MATRIX_DEBUG_TRACE_UI",
                    traceRequested.get().toString())
        }
        findByName("internal")?.let { internal ->
            // 若项目定义 internal，规则与 debug 相同；无需改变 isDebuggable
            internal.buildConfigField("boolean", "MATRIX_DEBUG_TRACE_UI",
                    traceRequested.get().toString())
        }
        getByName("release") {
            signingConfig = signingConfigs.getByName("platform")
            // release 与其他变体保持同一契约：仅 matrix.debugTraceUi 决定调试轨迹
            // 是否允许持久化及订阅，避免构建类型形成隐藏的第二开关。
            buildConfigField("boolean", "MATRIX_DEBUG_TRACE_UI",
                    traceRequested.get().toString())
        }
    }

    buildFeatures {
        buildConfig = true
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    testOptions {
        unitTests {
            isReturnDefaultValues = true
        }
    }

    // SQLCipher 传递 kotlin-stdlib，排除元数据冲突（老工程已验证做法）
    packaging {
        resources {
            excludes += "META-INF/*.kotlin_module"
        }
    }

    // Room migration 测试经 MigrationTestHelper 从 test APK assets 读 schema fixture
    sourceSets {
        getByName("androidTest") {
            assets.directories.add("schemas")
        }
    }
}

dependencies {
    // System API compile stub: same LineageOS build as the target grus image. It is compile-only;
    // framework supplies the implementation on-device and it is never packaged into the APK.
    compileOnly(files(lineageFrameworkJar))
    implementation(project(":matrix-agent-service-lib"))
    implementation(project(":ondevice"))

    // 持久化：SQLCipher Room 为权威存储
    implementation(libs.androidx.room.runtime)
    annotationProcessor(libs.androidx.room.compiler)
    implementation(libs.sqlcipher)
    implementation(libs.androidx.sqlite.framework)

    // 可延后可恢复的调度（P1：下载编排）
    implementation(libs.androidx.work.runtime)

    // 受控网络层（MatrixHttpClient）
    implementation(libs.okhttp)

    implementation(libs.jtokkit)

    // Host 正式语音运行时；release 也携带 Vosk native 库，才能实际装配 PTT/系统语音入口。
    implementation(libs.vosk)

    // Sherpa 模型上游发布为 tar.bz2（k2-fsa asr-models/kws-models），模型管道解压用
    implementation(libs.commons.compress)

    testImplementation(libs.junit)
    testImplementation(libs.org.json)
    testImplementation(libs.okhttp.mockwebserver)

    androidTestImplementation(libs.androidx.test.runner)
    androidTestImplementation(libs.androidx.test.ext.junit)
    androidTestImplementation(libs.androidx.test.rules)
    androidTestImplementation(libs.androidx.test.core)
    androidTestImplementation(libs.androidx.room.testing)
}

// android.jar intentionally hides ServiceManager. MatrixAgentService is a platform-signed,
// system-UID priv-app and deliberately uses ServiceManager.addService(), so compile against the
// matching Lineage framework stub rather than using reflection or an unchecked local workaround.
if (!lineageFrameworkJar.isFile) {
    throw GradleException(
        "Missing tools/framework/framework-lineage-grus.jar; see tools/framework/README.md",
    )
}

// 语音真机认证门禁（voicecert 包）：需预置 Vosk 模型/真实麦克风/中文 TTS 引擎/焦点抢占行为，
// 与常规 connectedDebugAndroidTest 隔离——常规任务中该包测试经 Assume 跳过，
// 本任务按包过滤 + voiceCert=true 放行，门禁失败即红。模型预置（应用内下载或 run-as 导入）
// 见 voicecert/VoiceCertification.java 类注释。
tasks.register("connectedVoiceCertificationAndroidTest") {
    group = "verification"
    description = "语音真机认证门禁(voicecert 包:模型/麦克风/TTS/焦点前提,失败即红)。"
    dependsOn("installDebug", "installDebugAndroidTest")
    doLast {
        // Gradle 9 移除了 task 上下文的 exec 委托——用 ProcessBuilder 直跑 adb；
        // adb 路径从 local.properties/ANDROID_HOME 解析（AGP 9 装饰扩展不暴露 adbExecutable）。
        // 无权限 fail-fast 测试在两次调用之间由宿主机 pm revoke/grant 包夹（进程内 revoke 会杀
        // 被测进程导致结果竞态）。结果解析：exit code 不可靠（崩溃也返回 0），按输出判定。
        val sdkProps = Properties()
        val localProps = rootProject.file("local.properties")
        if (localProps.exists()) {
            val stream = localProps.inputStream()
            stream.use { sdkProps.load(stream) }
        }
        val sdkDir = sdkProps.getProperty("sdk.dir") ?: System.getenv("ANDROID_HOME")
            ?: throw GradleException("无法定位 Android SDK(需 local.properties sdk.dir 或 ANDROID_HOME)")
        val adbPath = File(sdkDir, "platform-tools/adb").absolutePath
        val runner = "com.matrix.agent.test/androidx.test.runner.AndroidJUnitRunner"
        val deniedClass = "com.matrix.agent.voicecert.VoicePermissionDeniedInstrumentedTest"

        fun runInstr(label: String, extraArgs: List<String>) {
            val cmd = listOf(adbPath, "shell", "am", "instrument", "-w") + extraArgs + runner
            val proc = ProcessBuilder(cmd).redirectErrorStream(true).start()
            val output = proc.inputStream.bufferedReader().readText()
            proc.waitFor()
            logger.lifecycle("== $label ==\n$output")
            val lines = output.lines()
            // F=断言失败, E=JUnit Error；部分匹配类行与 crash 消息同行的情况
            val failed = lines.any { Regex("^com\\.matrix\\.agent\\S*:[.S]*[FE]").containsMatchIn(it) }
            val reported = lines.any { Regex("^com\\.matrix\\.agent\\S*:[.S]+").containsMatchIn(it) }
            val hardFail = output.contains("FAILURES") || output.contains("INSTRUMENTATION_FAILED")
                    || lines.any { Regex("^INSTRUMENTATION_STATUS_CODE:\\s*-\\d").containsMatchIn(it) }
            if (proc.exitValue() != 0 || failed || output.contains("Process crashed") || hardFail || !reported) {
                throw GradleException("语音认证门禁失败($label):\n$output")
            }
        }
        fun shell(vararg args: String) {
            val proc = ProcessBuilder(listOf(adbPath, "shell") + args).redirectErrorStream(true).start()
            val output = proc.inputStream.bufferedReader().readText()
            proc.waitFor()
            logger.lifecycle("== adb ${args.joinToString(" ")} ==\n$output")
            if (proc.exitValue() != 0) throw GradleException("adb ${args.joinToString(" ")} 失败:\n$output")
        }

        runInstr(
            "主包(排除无权限类,需权限)",
            listOf("-e", "package", "com.matrix.agent.voicecert", "-e", "notClass", deniedClass, "-e", "voiceCert", "true"),
        )
        shell("pm", "revoke", "com.matrix.agent", "android.permission.RECORD_AUDIO")
        try {
            runInstr(
                "无权限 fail-fast(全新无权限进程)",
                listOf("-e", "class", deniedClass, "-e", "voiceCert", "true"),
            )
        } finally {
            shell("pm", "grant", "com.matrix.agent", "android.permission.RECORD_AUDIO")
        }
    }
}

// AGP 的 connectedDebugAndroidTest 以及两条自定义认证任务都会依赖此安装步骤。将保险丝
// 放在 installDebugAndroidTest 上，确保阻止发生在 Instrumentation APK 触碰设备之前，而不是
// 等 connected task 的 doFirst（那时依赖任务已经执行）。CI/专用测试机须显式传 true。
tasks.matching { it.name == "installDebugAndroidTest" }.configureEach {
    doFirst {
        check(destructiveConnectedTestAllowed.get()) {
            "拒绝在未明确授权时安装 androidTest APK：该步骤可能重置真机的 " +
                    "Matrix Agent 私有数据。请仅在专用测试设备上执行，并显式加 " +
                    "-Pmatrix.allowDestructiveConnectedTest=true。"
        }
    }
}

// 端侧 MNN 推理认证门禁：模型是设备外部测试夹具，不能要求普通 connected 测试预置。
// OnDeviceInferenceTest 在常规任务中会 Assume 跳过；此任务显式打开 onDeviceCert，
// 因此模型、native load 或真实 tool-call 任一不满足都会使认证失败。
tasks.register("connectedOnDeviceCertificationAndroidTest") {
    group = "verification"
    description = "端侧 MNN 真机推理认证（需预置 Qwen3-0.6B-MNN，失败即红）。"
    dependsOn("installDebug", "installDebugAndroidTest")
    doLast {
        val sdkProps = Properties()
        val localProps = rootProject.file("local.properties")
        if (localProps.exists()) localProps.inputStream().use { sdkProps.load(it) }
        val sdkDir = sdkProps.getProperty("sdk.dir") ?: System.getenv("ANDROID_HOME")
            ?: throw GradleException("无法定位 Android SDK(需 local.properties sdk.dir 或 ANDROID_HOME)")
        val adbPath = File(sdkDir, "platform-tools/adb").absolutePath
        val command = listOf(
            adbPath, "shell", "am", "instrument", "-w",
            "-e", "class", "com.matrix.agent.OnDeviceInferenceTest",
            "-e", "onDeviceCert", "true",
            "com.matrix.agent.test/androidx.test.runner.AndroidJUnitRunner",
        )
        val process = ProcessBuilder(command).redirectErrorStream(true).start()
        val output = process.inputStream.bufferedReader().readText()
        process.waitFor()
        logger.lifecycle("== On-device inference certification ==\\n$output")
        val passed = output.contains("OK (1 test)")
        if (process.exitValue() != 0 || !passed || output.contains("FAILURES")
                || output.contains("INSTRUMENTATION_FAILED")) {
            throw GradleException("端侧推理认证失败：\\n$output")
        }
    }
}
